Update all files
Missing updates in recent pushes

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import ContactForm from "./ContactForm";
+//contact
 ---
 
 <section class="w-screen mx-auto py-16 lg:py-30 bg-stone-200 px-6 lg:px-8">
