--- a/src/components/DonationList.astro
+++ b/src/components/DonationList.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import ModalDonation from "./ModalDonation";
 //import { Button } from "./ui/button";
+//donation list
 ---
 
 <section
