--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -37,12 +37,12 @@ const siteSettings = await getSiteSettings();
 
   <!-- Open Graph tags -->
   <!-- Here, you put the title to which you want to be displayed when your page is linked. -->
-  <meta property="og:title" content="My New Astro Website" />
+  <meta property="og:title" content="Faith Angels" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.example.com/" />
   <meta
     property="og:description"
-    content="Your page’s description. Remember that Facebook will display only about 300 characters of description."
+    content="Restoring Hope for Our Seniors, One Act of Kindness at a Time"
   />
   <meta property="og:image" content={socialImageURL} />
   <meta property="og:image:alt" content="" />
