--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -4,6 +4,7 @@ import { Button } from "../components/ui/button";
 import { Image } from "astro:assets";
 import GivebutterButton from "./GivebutterButton";
 //import Navigation from "../components/Navigation.astro";
+//Givebutter links included
 ---
 
 <section
