--- a/src/components/PortableTextImage.astro
+++ b/src/components/PortableTextImage.astro
@@ -1,14 +1,15 @@
 ---
 // ./src/components/PortableTextImage.astro
-import { urlForImage } from '../sanity/lib/url-for-image';
+//custom
+import { urlForImage } from "../sanity/lib/url-for-image";
 
 const { asset, alt } = Astro.props.node;
 
 const url = urlForImage(asset).url();
-const webpUrl = urlForImage(asset).format('webp').url();
+const webpUrl = urlForImage(asset).format("webp").url();
 ---
 
 <picture>
-	<source srcset={webpUrl} type="image/webp" />
-	<img class="responsive__img" src={url} alt={alt} />
+  <source srcset={webpUrl} type="image/webp" />
+  <img class="responsive__img" src={url} alt={alt} />
 </picture>
