--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import Footer from "../components/Footer.astro";
 import BreakPoint from "../components/BreakPoint.astro";
 import Navigation from "../components/Navigation";
 import { getNavigation } from "../utils/api";
+//layout
 
 // Fetch navigation items
 const navItems = await getNavigation();
