--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import DonationList from "@/components/DonationList.astro";
 //import { Button } from "@/components/ui/button";
 //import { Image } from "astro:assets";
 //import Footer from "../components/Footer.astro";
+//updated with scroll-margin
 
 //import SuspendedLayout from '../layouts/SuspendedLayout.astro';
 
