--- a/src/components/EmergencyRelief.astro
+++ b/src/components/EmergencyRelief.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+//emergency relief
 ---
 
 <section class="flex flex-col gap-6 w-full max-w-[80rem] mx-auto px-6 md:px-8">
