--- a/src/components/SupportSection.astro
+++ b/src/components/SupportSection.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import { Image } from "astro:assets";
 import Givebutter from "../components/Givebutter.astro";
+//support section
 ---
 
 <div
