--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
 @plugin "tailwindcss-animate";
 /*@import "tw-animate-css";*/
 
+/** styles **/
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
