--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import "../styles/global.css";
 import Head from "../components/Head.astro";
 //import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
-import BreakPoint from "../components/BreakPoint.astro";
+//import BreakPoint from "../components/BreakPoint.astro";
 import Navigation from "../components/Navigation";
 import { getNavigation } from "../utils/api";
 //layout
@@ -16,7 +16,7 @@ const navItems = await getNavigation();
 <html lang="en">
   <Head />
   <body>
-    <BreakPoint />
+    <!-- <BreakPoint /> -->
     <Navigation client:load />
     <div class="min-h-screen mx-auto flex flex-col">
       <!-- <Navigation nav={{ items: navItems }} /> -->
