--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -53,7 +53,9 @@ const navItems = pages.map((page) => ({
   <div
     class="flex min-h-screen gap-4 max-w-[80rem] mx-auto px-6 lg:px-8 my-16 lg:my-16"
   >
-    <main class="flex-1 flex-col gap-4 w-3/4 px-6 border-r border-gray-300">
+    <main
+      class="flex-1 flex-col gap-4 w-3/4 px-6 md:border-r md:border-gray-300"
+    >
       <h1 class="text-3xl font-bold pb-2">{page.title}</h1>
       <span class="text-sm pb-2">{page.publishedAt}</span>
       <div class="prose max-w-none prose-h2:font-normal">
@@ -61,7 +63,7 @@ const navItems = pages.map((page) => ({
       </div>
       <!-- <button onclick="history.back()">Go Back</button> -->
     </main>
-    <aside class="sticky top-32 h-screen w-1/4 px-3">
+    <aside class="hidden md:block sticky top-32 h-screen w-1/4 px-3">
       <h2 class="text-xl font-bold pb-2">Quick Links</h2>
       <ul class="text-base">
         <li class="hover:text-primary-green">
