--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const navItems = await getNavigation();
   <body>
     <!-- <BreakPoint /> -->
     <Navigation client:load />
-    <div class="min-h-screen mx-auto flex flex-col">
+    <div class="min-h-screen mx-auto flex flex-col overflow-hidden">
       <!-- <Navigation nav={{ items: navItems }} /> -->
       <main class="flex flex-1 mx-auto">
         <div class="flex flex-col w-full h-full">
