--- a/src/components/EmergencyRelief.astro
+++ b/src/components/EmergencyRelief.astro
@@ -6,7 +6,7 @@ import "../styles/global.css";
 <section class="flex flex-col gap-6 w-full max-w-[80rem] mx-auto px-6 md:px-8">
   <div class="flex flex-col gap-6">
     <div class="w-full">
-      <div class="mx-auto max-w-7xl">
+      <div class="mx-auto md:max-w-7xl">
         <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
           <div class="col-span-1">
             <div>
@@ -14,11 +14,11 @@ import "../styles/global.css";
               <h3>Supporting Jamaica’s seniors affected by the storm</h3>
             </div>
             <h4 class="mt-4 pb-4 text-xl">Relief We’re Delivering</h4>
-            <p class="text-lg text-pretty text-gray-700">
-              Faith Angel for Seniors is a Montego Bay–based nonprofit dedicated
-              to uplifting and caring for vulnerable older adults. Whether
-              living alone, in senior homes, or displaced by crisis, we ensure
-              seniors receive dignity, compassion, and essential support.
+            <p>
+              Hurricane Melissa devastated communities across Jamaica, leaving
+              many seniors without food, water, shelter, medication, and basic
+              necessities. Some have lost their homes entirely. Many are
+              isolated, frightened, and without family support.
             </p>
           </div>
 
