--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -4,8 +4,8 @@ import ContactForm from "./ContactForm";
 //contact
 ---
 
-<section class="w-screen mx-auto py-16 lg:py-30 bg-stone-200 px-6 lg:px-8">
-  <div class="mx-auto max-w-7xl">
+<section class="w-screen mx-auto py-16 lg:py-30 bg-stone-50">
+  <div class="mx-auto max-w-[80rem] px-6 lg:px-8">
     <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
       <div>
         <h2>Get in touch</h2>
