--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -27,7 +27,7 @@ import GivebutterButton from "./GivebutterButton";
       >
     </p>
     <div class="flex flex-col md:flex-row gap-4">
-      <GivebutterButton />
+      <a href="#support"><Button>Give Hope Today</Button></a>
       <a href="#interactive-cards"
         ><Button variant="secondary">Learn How You Can Help</Button></a
       >
