--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -27,7 +27,7 @@ const testimonials = [
 ];
 ---
 
-<section class="relative py-16 lg:py-30 px-6 lg:px-8">
+<section class="relative py-16 lg:py-30 px-6 lg:px-8 max-w-[80rem] mx-auto">
   <div class="relative z-10 max-w-screen-xl mx-auto">
     <div class="space-y-6 max-w-2xl sm:text-center md:mx-auto">
       <h2>The Difference Your Support Makes</h2>
