--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -32,7 +32,7 @@ import "../styles/global.css";
 
       <div class="rounded-lg shadow-lg overflow-hidden">
         <img
-          src="/images/Abbie Townsend for The New York Times.webp"
+          src="/images/rickey-hutchinson-qKStrLuofFU-unsplash.avif"
           class="rounded"
           alt=""
         />
