--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -63,7 +63,7 @@ const { nav } = Astro.props as NavigationProps;
         }
       </ul>
 
-      <ul class="mt-8 flex justify-center gap-6 sm:mt-0 lg:justify-end">
+      <ul class="hidden mt-8 flex justify-center gap-6 sm:mt-0 lg:justify-end">
         <li>
           <a
             href="#"
