--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -28,7 +28,7 @@ import GivebutterButton from "./GivebutterButton";
     </p>
     <div class="flex flex-col md:flex-row gap-4">
       <a href="#support"><Button>Give Hope Today</Button></a>
-      <a href="#interactive-cards"
+      <a href="#help"
         ><Button variant="secondary">Learn How You Can Help</Button></a
       >
     </div>
