--- a/src/components/astro-archives/Sponsor.astro
+++ b/src/components/astro-archives/Sponsor.astro
@@ -11,7 +11,7 @@ import GivebutterDailyMeals from "./GivebutterDailyMeals";
     <div
       class="flex flex-col h-auto w-screen py-16 lg:py-30 px-6 lg:px-8 mx-auto z-10"
     >
-      <div class="relative flex flex-col gap-6 w-full max-w-[80rem] mx-auto">
+      <div class="relative flex flex-col gap-1 w-full max-w-[80rem] mx-auto">
         <div class="w-full lg:max-w-1/2 lg:px-8">
           <h2 class="text-white">Sponsor a Senior</h2>
           <p class="mt-6 text-white">
@@ -25,7 +25,7 @@ import GivebutterDailyMeals from "./GivebutterDailyMeals";
           </p>
         </div>
         <div class="w-full xl:max-w-5/6 lg:px-8">
-          <ul class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-4">
+          <ul class="grid grid-cols-1 md:grid-cols-3 gap-4">
             <li
               class="flex flex-col justify-between h-full bg-white/80 border border-white/80 py-6 px-4 rounded-lg backdrop-blur-sm shadow-xl"
             >
