--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Swiper from "../components/Swiper.tsx";
   <div
     class="flex flex-col gap-16 lg:gap-30 bg-stone-50 py-16 lg:py-30 w-screen"
   >
-    <section id="about" class="scroll-mt-30"><About /></section>
+    <section id="about" class="scroll-mt-42"><About /></section>
     <section id="relief" class="scroll-mt-30 lg:scroll-mt-42">
       <EmergencyRelief />
     </section>
@@ -41,7 +41,7 @@ import Swiper from "../components/Swiper.tsx";
   <section id="support" class="scroll-mt-16 lg:scroll-mt-24">
     <SupportSection />
   </section>
-  <section id="interactive-cards" class="scroll-mt-16 lg:scroll-mt-24">
+  <section id="help" class="scroll-mt-16 lg:scroll-mt-24">
     <InteractiveCards client:visible />
   </section>
   <section id="sponsor" class="scroll-mt-16 lg:scroll-mt-24">
